# configure-semantic-release-manifest

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: cli.rs  error.rs  lib.rs  main.rs
tests/: test_remove.rs
