[package]
name = "configure-semantic-release-manifest"
version = "1.0.50"
edition = "2021"
authors = ["Eric Crosson <eric.s.crosson@utexas.edu>"]
license = "MIT OR Apache-2.0"
description = "CLI to configure your semantic-release manifest"
readme = "README.md"
homepage = "https://github.com/EricCrosson/configure-semantic-release-manifest"
keywords = ["cli", "semantic-release", "configure"]
categories = ["command-line-utilities"]
exclude = [
  "/.envrc",
  "/.github",
  "/.gitignore",
  "/flake.{lock,nix}"
]

[lib]
name = "configure_semantic_release_manifest"

[[bin]]
name = "configure-semantic-release-manifest"

[dependencies]
clap = { version = "=4.3.11", features = ["cargo", "derive", "wrap_help"] }
env_logger = { version = "=0.10.0", default-features = false }
find-semantic-release-config = "=1.0.8"
indexmap = { version = "=2.0.0", features = ["serde"] }
log = "=0.4.19"
serde_json = { version = "=1.0.102", features = ["preserve_order"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
